--- a/about.html
+++ b/about.html
@@ -44,12 +44,13 @@
         <div class="container">
             <article id="main-col">
                 <h1 class="page-title">About us </h1>
-                <p>
+                <p class="about_us">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure nulla dolores quos. Quasi maiores
                     harum quia earum similique! Suscipit cupiditate laudantium expedita illum, tempore omnis nihil
                     dignissimos quibusdam dolores vel.
                 </p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, sapiente dolore nemo magnam error
+                <p class="about_us">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, sapiente dolore nemo
+                    magnam error
                     culpa? Corrupti maxime quas molestiae, eaque deserunt earum enim, nihil expedita magni cupiditate
                     eveniet doloribus qui?
                     Ipsam facere, tempore assumenda ex, a doloremque quia itaque velit fugit hic sequi sapiente
