--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
     <section id="showcase">
         <div class="container">
-            <h1>Affordable professional Web Design</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus aut quod fuga odio autem, aperiam alias
+            <h1 class="hero_text">Affordable professional Web Design</h1>
+            <p class="hero_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus aut quod fuga odio
+                autem, aperiam alias
                 iure eaque facilis totam voluptatum perspiciatis consectetur sed. Sapiente dolores distinctio quasi
                 voluptates pariatur fugit laboriosam voluptatem aliquid veniam rerum, tempora, consequuntur sed quisquam
                 exercitationem debitis ducimus veritatis quae temporibus esse dolore! Ullam, sequi.
